package DesignPatterns.Factory.FactoryMethod.Fruit;

public class Apple extends Fruit {
    @Override
    public void getName() {
        System.out.println("Apple");
    }
}