package DesignPatterns.Factory.FactoryMethod.Fruit;

public abstract class Fruit {
    public abstract void getName();
}