package DesignPatterns.Factory.FactoryMethod.Fruit;

public class Pear extends Fruit {
	@Override
	public void getName() {
		System.out.println("Pear");
	}
}